--- a/frontend/src/Auth.css
+++ b/frontend/src/Auth.css
@@ -20,6 +20,15 @@
   margin-bottom: 30px;
 }
 
+.auth-icon {
+  width: 80px;
+  height: 80px;
+  margin-bottom: 15px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .auth-header h1 {
   color: #333;
   font-size: 2rem;
